# prompt-opt-cookbook

./: .gitignore  README.md  requirements.txt
gepa/classifier/: 03_Advanced_DSPy_Optimizer_GEPA.ipynb  03_Advanced_DSPy_Optimizer_GEPA.py  gepa-config.yaml  gepa_optimizer_for_classifier.ipynb  utils.py
gepa/clinical-note-error-detection/: .gitignore  LICENSE  README.md  pyproject.toml  run.sh
gepa/clinical-note-error-detection/sample_run/: README.md  baseline_val_metrics_overall.json  optimised_val_metrics_overall.json  program.json  summary.json
gepa/clinical-note-error-detection/slurm/: run_medec_gepa_grid.sbatch  run_medec_gepa_test_inference.sbatch  run_medec_qwen3_array.sbatch
gepa/clinical-note-error-detection/src/: dataset.py  detect_eval.py  detect_gepa.py  evaluation.py  models.py  plot_pareto_front.py  task_utils.py
gepa/de-id/: gepa_deidentification.ipynb  gepa_optimizer_for_deidentification.ipynb  utils.py
